5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1594_1801.log
== TEST (2019-05-02 13:24:42) 
-- CODE:
objeto=input("Digite o nome do objeto: ")
feitico=input("Numero de vezes que deve repetir: ")

Hermitwo=objeto*feitico

print("Porta"+ Hermitwo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Hermitwo=objeto*feitico
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:27:15) 
-- CODE:
objeto=input("Digite o nome do objeto: ")
feitico=input("Numero de vezes que deve repetir: ")

Hermitwo=objeto*feitico

print("Porta"+ Hermitwo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Hermitwo=objeto*feitico
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:28:25) 
-- CODE:
o=input("Digite o nome do objeto: ")
f=input("Numero de vezes que deve repetir: ")

Hermitwo=o*f

print("Porta"+ Hermitwo " ")
-- ERROR:
File "XXXX", line 6
    print("Porta"+ Hermitwo " ")
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:28:45) 
-- CODE:
o=input("Digite o nome do objeto: ")
f=input("Numero de vezes que deve repetir: ")

Hermitwo=o*f

print("Porta"+ Hermitwo " ")
-- ERROR:
File "XXXX", line 6
    print("Porta"+ Hermitwo " ")
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:33:35) 
-- CODE:
o=input("Digite o nome do objeto: ")
f=input("Numero de vezes que deve repetir: ")

Hermitwo=o*f

mensagem="Abra"+Hermitwo

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Hermitwo=o*f
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:35:41) 
-- CODE:
o=input("Digite o nome do objeto: ")
f=int(input("Numero de vezes que deve repetir: "))

Hermitwo=o*f

mensagem=12"Abra"+Hermitwo

print(mensagem)
-- EXECUTION TIME:
0.138792
-- ERROR:
  File "/home/codebench/codes/1594/1801/main.py", line 6
    mensagem=12"Abra"+Hermitwo
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:36:04) 
-- CODE:
o=1input("Digite o nome do objeto: ")
f=int(input("Numero de vezes que deve repetir: "))

Hermitwo=o*f

mensagem="Abra"+Hermitwo

print(mensagem)
-- EXECUTION TIME:
0.203495
-- ERROR:
  File "/home/codebench/codes/1594/1801/main.py", line 1
    o=1input()
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:37:06) 
-- CODE:
o=input("Digite o nome do objeto: ")
f=int(input("Numero de vezes que deve repetir: "))

Her mitwo=o*f

mensagem="Abra"+Hermitwo

print(mensagem)
-- EXECUTION TIME:
0.126601
-- ERROR:
  File "/home/codebench/codes/1594/1801/main.py", line 4
    Her mitwo=o*f
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:37:11) 
-- CODE:
o=input("Digite o nome do objeto: ")
f=int(input("Numero de vezes que deve repetir: "))

Her mitwo=o*f

mensagem="Abra"+Hermitwo

print(mensagem)
-- ERROR:
File "XXXX", line 4
    Her mitwo=o*f
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
